- change self-hosted with label

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,7 +5,7 @@ on:
       - main
 jobs:
   build-only:
-    runs-on: self-hosted
+    runs-on: severyanochka-label
     steps:
       - name: Checkout
         uses: actions/checkout@v3
