--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,6 +13,9 @@ jobs:
         run: npm install
       - name: Build only
         run: npm run build-only
+  deploy:
+    needs: [build-only]
+    runs-on: severyanochka-label
       - name: Clear cache
         run: docker builder prune -a
       - name: Build docker image
