--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,6 +9,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+      - name: Install deps
+        run: npm install
   unit-test:
     needs: [checkout]
     runs-on: severyanochka-label
